--- a/assets/javascripts/discourse/connectors/category-custom-settings/anonymous-categories.hbs
+++ b/assets/javascripts/discourse/connectors/category-custom-settings/anonymous-categories.hbs
@@ -1,15 +1,13 @@
-{{#if siteSettings.anonymous_categories_enabled}}
-  <h3>{{i18n "anonymous_categories.title"}}</h3>
-  <section class='field'>
-    <div class="anonymous-categories">
-      <label class="checkbox-label">
-        {{input 
-          type="checkbox" 
-          checked=(readonly category.force_anonymous_posting)
-          change=(action "onChangeSetting" value="target.checked")
-        }}
-        {{i18n 'anonymous_categories.force_anonymous_posting'}}
-      </label>
-    </div>
-  </section>
-{{/if}}
+<h3>{{i18n "anonymous_categories.title"}}</h3>
+<section class="field">
+  <div class="anonymous-categories">
+    <label class="checkbox-label">
+      <Input
+        @type="checkbox"
+        @checked={{readonly this.category.force_anonymous_posting}}
+        {{on "change" (action "onChangeSetting" value="target.checked")}}
+      />
+      {{i18n "anonymous_categories.force_anonymous_posting"}}
+    </label>
+  </div>
+</section>
